apps/lidarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lidarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lidarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: lidarr
    spec:
      containers:
        - image: linuxserver/lidarr:latest
          imagePullPolicy: Always
          name: lidarr
          resources:
            requests:
              cpu: "50m"
              memory: "200Mi"
          volumeMounts:
            - name: lidarr-config
              mountPath: /config
            - name: lidarr-array
              mountPath: /music
              subPath: Music
            - name: lidarr-array
              mountPath: /downloads
              subPath: Downloads
      volumes:
        - name: lidarr-config
          persistentVolumeClaim:
            claimName: lidarr-config-hostpath
        - name: lidarr-array
          persistentVolumeClaim:
            claimName: array
