apps/lidarr/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: lidarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lidarr
  serviceName: lidarr
  template:
    metadata:
      labels:
        app: lidarr
    spec:
      containers:
        - image: ghcr.io/linuxserver/lidarr:version-0.7.2.1878
          name: lidarr
          livenessProbe:
            httpGet:
              path: /login
              port: 8686
            initialDelaySeconds: 10
            periodSeconds: 15
          resources:
            requests:
              cpu: "50m"
              memory: "200Mi"
          volumeMounts:
            - name: config
              mountPath: /config
            - name: array
              subPath: Music
              mountPath: /music
            - name: array
              subPath: Downloads
              mountPath: /downloads
      volumes:
        - name: array
          persistentVolumeClaim:
            claimName: array
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: longhorn
        resources:
          requests:
            storage: 1Gi
